# hobania-update

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  rust-toolchain.toml
.cargo/: config
.gitlab/CI/: analyze.gitlab-ci.yml  build.gitlab-ci.yml  cache.gitlab-ci.yml  check.gitlab-ci.yml  publish.gitlab-ci.yml  recompile.yml  release.yml
.gitlab/scripts/: benchmark.sh
assets/common/: canary.canary  npc_names.ron  recipe_book.ron  sprite_behavior_manifest.ron
assets/common/abilities/: weapon_ability_manifest.ron
assets/common/body/: aggro.ron  base_energy.ron  base_health.ron  base_health_increase.ron  density.ron  mass.ron
assets/common/cave_scatter/: dark_floor.ron  deep_floor.ron  shallow_floor.ron
assets/plugins/: hello.plugin.tar  plugin1.plugin.tar  veloren_plugin_template.plugin.tar
assets/server/manifests/: kits.ron  psyche2.ron
assets/server/voxel/: Air_Balloon.vox  Air_Balloon_rudder.vox  Human_Airship.vox  rudder.vox
assets/voxygen/: item_image_manifest.ron
assets/voxygen/i18n/: en.ron
assets/voxygen/lod/: pine.blend
assets/voxygen/shaders/: clouds-frag.glsl  figure-frag.glsl  figure-vert.glsl  light-shadows-figure-vert.glsl  lod-structure-frag.glsl  lod-structure-vert.glsl  lod-terrain-frag.glsl  lod-terrain-vert.glsl  particle-vert.glsl  postprocess-frag.glsl  sprite-frag.glsl  sprite-vert.glsl  terrain-frag.glsl  ui-frag.glsl
assets/voxygen/voxel/: humanoid_armor_back_manifest.ron  humanoid_armor_belt_manifest.ron  humanoid_armor_chest_manifest.ron  humanoid_armor_foot_manifest.ron  humanoid_armor_hand_manifest.ron  humanoid_armor_pants_manifest.ron  humanoid_armor_shoulder_manifest.ron  humanoid_color_manifest.ron  (+4 more)
assets/world/: features.ron
client/: Cargo.toml
client/src/: chonk_cache.rs  error.rs  lib.rs  revertclock.rs  validate_version.rs
common/: Cargo.toml
common/assets/: Cargo.toml
common/frontend/: Cargo.toml
common/frontend/src/: lib.rs
common/net/: Cargo.toml
common/src/: cached_spatial_grid.rs  clock.rs  cmd.rs  combat.rs  consts.rs  debug_info.rs  event.rs  glider.rs  grid.rs  lib.rs  lod.rs  lottery.rs  outcome.rs  ray.rs  resources.rs  rtsim.rs  slowjob.rs  store.rs  vol.rs
common/state/: Cargo.toml
common/sys/: Cargo.toml
common/systems/: Cargo.toml
network/examples/: chat.rs
network/src/: api.rs  channel.rs  message.rs  participant.rs
nix/: rustPkgs.nix
plugin/rt/: Cargo.toml
plugin/rt/examples/: hello.rs
plugin/rt/src/: lib.rs
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: main.rs
server-gui/: Cargo.toml
server-gui/src/: main.rs
server/src/: character_creator.rs  chunk_generator.rs  client.rs  cmd.rs  connection_handler.rs  lib.rs  login_provider.rs  pet.rs  query_server.rs  settings.rs  state_ext.rs  terrain_persistence.rs  test_world.rs  wiring.rs
torvus/: .env.example  Cargo.toml  Dockerfile  README.md
torvus/src/: main.rs
voxygen/: Cargo.toml
voxygen/anim/: Cargo.toml
voxygen/benches/: meshing_benchmark.rs
voxygen/dynlib/: Cargo.toml
voxygen/egui/: Cargo.toml
voxygen/egui/dyn/: Cargo.toml
voxygen/egui/dyn/src/: lib.rs
voxygen/egui/src/: character_states.rs  dyn_lib.rs  lib.rs
voxygen/examples/: character_renderer.rs
voxygen/src/: controller.rs  i18n.rs  lib.rs  logging.rs  main.rs  run.rs  session.rs  settings.rs  singleplayer.rs  window.rs
world/: Cargo.toml
world/benches/: chunk_gen.rs  site2.rs
world/examples/: chunk_compression_benchmarks.rs  dungeon_voxel_export.rs  view.rs  water.rs
world/src/: all.rs  canvas.rs  config.rs  index.rs  lib.rs  lod.rs
worldsim/src/: lib.rs
(+4158 files in other folders)
