[package]
authors = ["Marcel Märtens <marcel.cochem@googlemail.com>", "Imbris <imbrisf@gmail.com>"]
edition = "2018"
name = "veloren-common-frontend"
description = "common stuff that is used by server-cli and voxygen directly"
version = "0.10.0"

[features]
tracy = ["common-base/tracy", "tracing-tracy"]

[dependencies]
common-base = { package = "veloren-common-base", path = "../base" }

# Logging
termcolor = "1.1"
tracing = { version = "0.1", default-features = false }
tracing-appender = "0.1"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.2.3", default-features = false, features = ["env-filter", "fmt", "chrono", "ansi", "smallvec", "tracing-log"]}
console-subscriber = { git = "https://github.com/tokio-rs/console.git", rev = "926de99ce4cbfd02c87190f9ec5f1c60b5c305d5" }

# TODO: required for console-subscriber, don't include by default
tokio = "1.2"

# Tracy
tracing-tracy = { version = "0.6.0", optional = true }
