[package]
authors = ["Ben Wallis <atomyc@gmail.com>"]
name = "veloren-voxygen-egui"
edition = "2018"
version = "0.9.0"

[features]
use-dyn-lib = ["libloading", "notify", "lazy_static", "tracing", "find_folder"]
be-dyn-lib = []

[dependencies]
client = {package = "veloren-client", path = "../../client"}
common = {package = "veloren-common", path = "../../common"}
egui = "0.11"
egui_winit_platform = "0.6"

# Hot Reloading
find_folder = {version = "0.3.0", optional = true}
lazy_static = {version = "1.4.0", optional = true}
libloading = {version = "0.7", optional = true}
notify = {version = "5.0.0-pre.2", optional = true}
tracing = {version = "0.1", optional = true}

